[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "priority-hire-env"
version = "0.1.0"
description = "OpenEnv dynamic interview scheduling environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.116.1",
  "openenv-core>=0.2.0",
  "openai>=2.7.2,<3.0.0",
  "pydantic==2.11.7",
  "uvicorn==0.35.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["priority_hire_env*", "server*"]
